// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VSelectList.ts should display falsy items 1`] = `
<div class="v-sheet theme--light v-list v-select-list theme--light"
     role="listbox"
     tabindex="-1"
>
  <div aria-selected="false"
       id="list-item-39-0"
       role="option"
       tabindex="0"
       class="v-list-item v-list-item--link theme--light"
  >
    <div class="v-list-item__content">
      <div class="v-list-item__title">
        0
      </div>
    </div>
  </div>
  <div aria-selected="false"
       id="list-item-39-1"
       role="option"
       tabindex="0"
       class="v-list-item v-list-item--link theme--light"
  >
    <div class="v-list-item__content">
      <div class="v-list-item__title">
        null
      </div>
    </div>
  </div>
  <div aria-selected="false"
       id="list-item-39-2"
       role="option"
       tabindex="0"
       class="v-list-item v-list-item--link theme--light"
  >
    <div class="v-list-item__content">
      <div class="v-list-item__title">
        false
      </div>
    </div>
  </div>
  <div aria-selected="false"
       id="list-item-39-3"
       role="option"
       tabindex="0"
       class="v-list-item v-list-item--link theme--light"
  >
    <div class="v-list-item__content">
      <div class="v-list-item__title">
        undefined
      </div>
    </div>
  </div>
  <div aria-selected="false"
       id="list-item-39-4"
       role="option"
       tabindex="0"
       class="v-list-item v-list-item--link theme--light"
  >
    <div class="v-list-item__content">
      <div class="v-list-item__title">
      </div>
    </div>
  </div>
</div>
`;

exports[`VSelectList.ts should display no-data-text when item slot is provided 1`] = `
<div class="v-sheet theme--light v-list v-select-list theme--light"
     role="listbox"
     tabindex="-1"
>
  <div tabindex="-1"
       class="v-list-item theme--light"
  >
    <div class="v-list-item__content">
      <div class="v-list-item__title">
        undefined
      </div>
    </div>
  </div>
</div>
`;

exports[`VSelectList.ts should generate children 1`] = `
<div class="v-sheet theme--light v-list v-select-list theme--light"
     role="listbox"
     tabindex="-1"
>
  <div header="true"
       class="v-subheader theme--light"
  >
    true
  </div>
  <hr divider="true"
      class="v-divider theme--light"
      role="separator"
      aria-orientation="horizontal"
  >
  <div aria-selected="false"
       id="list-item-16-2"
       role="option"
       tabindex="0"
       class="v-list-item v-list-item--link theme--light"
  >
    <div class="v-list-item__content">
      <div class="v-list-item__title">
        foo
      </div>
    </div>
  </div>
</div>
`;
